-
Type:
Bug
-
Resolution: Fixed
-
Priority:
Major - P3
-
Affects Version/s: None
-
Component/s: None
-
None
-
Storage Execution
-
Fully Compatible
-
Windows
-
-
Storage Execution 2026-04-13
-
200
-
None
-
None
-
None
-
None
-
None
-
None
-
None
A number of test across Storage Execution and Replication intentionally terminate server processes to test recovery. Windows builds attempt to create a minidump in the exception handler triggered by process termination. This can lead to "Loader Lock" where the process hangs while trying to write the minidump file.
This appeared to be solved in, SERVER-116978 by loading the DbgHelp library at startup, but BFs have still occurred since.
A few suggestions on how to fix this:
- Remove minidump creation entirely
- Allow setting a server parameter or failpoint that enables/disables minidump writing to be used with tests that intentionally fail the server
- is related to
-
SERVER-116978 Tests that expect server crashes will spuriously time out on Windows
-
- Closed
-