SERVER-122300 disable win32 minidump in tests with intentional crash behavior (#50777)

GitOrigin-RevId: 29dae0ef70394344bebd067daf6cda0a75ab7c9e