src/mongo/util/exception_filter_win32.h
@@ -29,11 +29,25 @@
 
 #pragma once
 
+#include "mongo/base/status.h"
 #include "mongo/util/modules.h"
 
 namespace mongo {
 
 void setWindowsUnhandledExceptionFilter();
+
+/**
+ * Controls whether Windows minidump generation is enabled. Called by the
+ * win32MinidumpEnabled server parameter's on_update callback to decouple
+ * the exception filter (in //src/mongo:base) from the IDL server parameter
+ * infrastructure (in //src/mongo/db:windows_options).
+ */
+void setWin32MinidumpEnabled(bool enabled);
+
+/**
+ * on_update callback for the win32MinidumpEnabled server parameter.
+ */
+Status onUpdateWin32MinidumpEnabled(bool newValue);
 
 #ifdef _WIN32
 
